Meh Dungeon gen
Meh

--- a/ProjectHoloLens/Assembly-CSharp.csproj
+++ b/ProjectHoloLens/Assembly-CSharp.csproj
@@ -83,12 +83,14 @@
     <Compile Include="Assets\Scripts\AI\PlayerCharacter.cs" />
     <Compile Include="Assets\Scripts\AI\StateMachine.cs" />
     <Compile Include="Assets\Scripts\DungeonGen\BinarySpacePartitioner.cs" />
-    <Compile Include="Assets\Scripts\DungeonGen\DungeonCreater.cs" />
-    <Compile Include="Assets\Scripts\DungeonGen\DungeonGen.cs" />
+    <Compile Include="Assets\Scripts\DungeonGen\CorridorNode.cs" />
+    <Compile Include="Assets\Scripts\DungeonGen\CorridorsGenerator.cs" />
+    <Compile Include="Assets\Scripts\DungeonGen\DugeonGenerator.cs" />
+    <Compile Include="Assets\Scripts\DungeonGen\DungeonCreator.cs" />
     <Compile Include="Assets\Scripts\DungeonGen\Line.cs" />
     <Compile Include="Assets\Scripts\DungeonGen\Node.cs" />
-    <Compile Include="Assets\Scripts\DungeonGen\RoomGenerate.cs" />
-    <Compile Include="Assets\Scripts\DungeonGen\RoomNodes.cs" />
+    <Compile Include="Assets\Scripts\DungeonGen\RoomGenerator.cs" />
+    <Compile Include="Assets\Scripts\DungeonGen\RoomNode.cs" />
     <Compile Include="Assets\Scripts\DungeonGen\StructureHelper.cs" />
     <Compile Include="Assets\Scripts\Interactible.cs" />
     <Compile Include="Assets\Scripts\InteractibleManager.cs" />
